--- a/hw6/hw6.html
+++ b/hw6/hw6.html
@@ -7,7 +7,7 @@
     <style>
         body {
             margin: 0;
-            overflow: hidden; /* scrollbar 제거 */
+            overflow: hidden;
         }
     </style>
 </head>
