--- a/hw8/hw8.html
+++ b/hw8/hw8.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <canvas id="glCanvas"></canvas>
-    <script src="../util/gl-matrix-min.js"></script>
+    <script src="./util/gl-matrix-min.js"></script>
     <script type="module" src="hw8.js"></script>
 </body>
 </html>
